--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,18 @@
     "require": {
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.6",
+        "drupal/acsf": "^2.69",
         "drupal/core-composer-scaffold": "^9",
         "drupal/core-recommended": "^9",
         "drush/drush": "^10.3"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/installers": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-composer-scaffold": true
+        }
     },
     "extra": {
         "drupal-scaffold": {
